name:              nor
version:           1.0
build-type:        Simple
cabal-version:     >= 1.2 
license:           BSD3
author:            Juan Carlos Montemayor Elosua
stability:         alpha

executable nor
  main-is: Main.hs
  build-depends:
    base >= 2,
    mtl,
    cryptohash,
    containers,
    Diff,
    cereal,
    bytestring,
    directory
  ghc-options: -Wall

