name:              nor
version:           1.0
build-type:        Simple
cabal-version:     >= 1.2
license:           LGPL
author:            Matthew Russell, Hashem Nasarat, Juan Carlos Montemayor Elosua
stability:         alpha

executable nor
  main-is: Main.hs
  build-depends:
    base >= 2,
    mtl,
    cryptohash,
    containers,
    Diff == 0.3.0,
    cereal,
    bytestring,
    directory
  ghc-options: -Wall

